objects/ProductRequest.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Con Req Group</label>
        <referenceTo>Con_Req_Group__c</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Me__c</fullName>
        <formula>$User.Id = CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Approval_Status__c</fullName>
        <label>Customer Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer_Contact__c</fullName>
        <label>Manufacturer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Manufacturer Account Record for RMA Tracking</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor- Material</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Requests (Manufacturer)</relationshipLabel>
        <relationshipName>Product_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mass_Transfer_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Transfer Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM_Manufacturer__c</fullName>
        <inlineHelpText>From Product Record</inlineHelpText>
        <label>OEM Manufacturer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_PRLIs__c</fullName>
        <label>Open PRLIs</label>
        <summaryFilterItems>
            <field>ProductRequestLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Fulfilled</value>
        </summaryFilterItems>
        <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_ROLIs__c</fullName>
        <formula>Return_Order__r.Open_ROLIs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open ROLIs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProductItem.Location.Service_Resource_User__c</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ProductItem</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Location__c</fullName>
        <label>Purchase Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Approval_Status__c</fullName>
        <label>Request Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Replacement__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Request Replacement?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>For Site</fullName>
                </value>
                <value>
                    <fullName>Ad-Hoc</fullName>
                </value>
                <value>
                    <fullName>Field Purchase</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Ad-Hoc/Field Purchase</fullName>
                    <isActive>false</isActive>
                    <label>Ad-Hoc/Field Purchase</label>
                </value>
                <value>
                    <fullName>Return</fullName>
                    <isActive>false</isActive>
                    <label>Return</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Order</label>
        <referenceTo>ReturnOrder</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rush?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <inlineHelpText>If Home, Shipping Address not required.</inlineHelpText>
        <label>Ship To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_PRLIs__c</fullName>
        <label>Total PRLIs</label>
        <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Purchase_Cost__c</fullName>
        <label>Total Purchase Cost</label>
        <summarizedField>ProductRequestLineItem.Purchase_Cost__c</summarizedField>
        <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Field_Purchases</fullName>
        <columns>Name</columns>
        <columns>Request_Type__c</columns>
        <columns>Ship_to_User__c</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Field Purchase</value>
        </filters>
        <label>All Field Purchases</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inventory_Requests</fullName>
        <columns>Name</columns>
        <columns>Request_Type__c</columns>
        <columns>Ship_to_User__c</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Ad-Hoc</value>
        </filters>
        <label>All Inventory Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_My_Product_Requests</fullName>
        <columns>Name</columns>
        <columns>Request_Type__c</columns>
        <columns>WorkOrder</columns>
        <columns>DestinationLocation</columns>
        <columns>SourceLocation</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Created_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All My Product Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ProductRequests</fullName>
        <columns>Name</columns>
        <columns>Case</columns>
        <columns>Case_Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Rush__c</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedBy</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RMAs</fullName>
        <columns>Name</columns>
        <columns>Case</columns>
        <columns>Case_Status__c</columns>
        <columns>OEM_Manufacturer__c</columns>
        <columns>RMA__c</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>RMA</value>
        </filters>
        <label>All RMAs</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Replacement_Requests</fullName>
        <columns>Name</columns>
        <columns>Product_Item__c</columns>
        <columns>Return_Order__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Replacement</value>
        </filters>
        <label>All Replacement Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Product_Requests</fullName>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>WorkOrder</columns>
        <columns>WorkOrderLineItem</columns>
        <columns>DestinationLocation</columns>
        <columns>SourceLocation</columns>
        <columns>Case</columns>
        <columns>Account</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Request_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Billable__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Approved Product Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inventory_Management_ProductRequest</fullName>
        <columns>Name</columns>
        <columns>Case</columns>
        <columns>Case_Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Rush__c</columns>
        <columns>Status</columns>
        <columns>CreatedBy</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>IM Review</value>
        </filters>
        <label>Inventory Management</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Field_Purchases</fullName>
        <columns>Name</columns>
        <columns>Request_Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Purchase_Location__c</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Field Purchase</value>
        </filters>
        <filters>
            <field>Created_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Field Purchases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Inventory_Requests</fullName>
        <columns>Name</columns>
        <columns>Request_Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Ad-Hoc</value>
        </filters>
        <filters>
            <field>Created_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Inventory Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Product_Requests</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Case</columns>
        <columns>Case_Status__c</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>For Site</value>
        </filters>
        <filters>
            <field>Created_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Product Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_RMAs</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Case</columns>
        <columns>WorkOrder</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>RMA</value>
        </filters>
        <filters>
            <field>Created_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open RMAs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Replacement_Requests</fullName>
        <columns>Name</columns>
        <columns>Product_Item__c</columns>
        <columns>Return_Order__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status</columns>
        <columns>DestinationLocation</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Replacement</value>
        </filters>
        <filters>
            <field>Created_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Replacement Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_ProductRequests</fullName>
        <columns>Name</columns>
        <columns>Request_Type__c</columns>
        <columns>WorkOrder</columns>
        <columns>DestinationLocation</columns>
        <columns>SourceLocation</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Product Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Requests_Pending_Customer_Approv</fullName>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>WorkOrder</columns>
        <columns>WorkOrderLineItem</columns>
        <columns>DestinationLocation</columns>
        <columns>SourceLocation</columns>
        <columns>Case</columns>
        <columns>Account</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Customer_Approval_Status__c</field>
            <operation>equals</operation>
            <value>NA,Pending</value>
        </filters>
        <label>Product Requests Pending Customer Approv</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Ad_Hoc_Field_Purchase</fullName>
        <active>true</active>
        <description>Product Request for additional Products, Consumables, or Tools</description>
        <label>Ad-Hoc/Field Purchase</label>
    </recordTypes>
    <recordTypes>
        <fullName>For_Site</fullName>
        <active>true</active>
        <description>Product Request for a required product for Work Order completion</description>
        <label>For Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA</fullName>
        <active>true</active>
        <description>Product Request record for view RMAs</description>
        <label>RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Replacement</fullName>
        <active>true</active>
        <description>Product Request record for Replacements</description>
        <label>Replacement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>